app/02-app.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: traefik/traefikee-webapp-demo:v2

---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: app
      port: 80
  selector:
    app: app
